force-app/main/default/objects/OrderItemWorkOrder__c/OrderItemWorkOrder__c.object-meta.xml
<CustomObject>
    <label>Order Product Work Order</label>
    <nameField>
        <displayFormat>OIWO{000000}</displayFormat>
        <label>Order Item Work Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Products Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>