force-app/main/default/objects/OrderItemWorkOrder__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products Work Orders</relationshipLabel>
    <relationshipName>OrderItemsWorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>