force-app/main/default/objects/OrderItemWorkOrder__c/fields/WorkOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderStatus__c</fullName>
    <formula>TEXT( WorkOrder__r.Status )</formula>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>